# life-sfml

./: CMakeLists.txt  Game.cpp  Game.h  README.md  constants.h  main.cpp
